otus-users-dz4/k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-api
spec:
  selector:
    app: users-api
  ports:
  - port: 80
    targetPort: 8000
  type: ClusterIP
